public/assets/css/consumer/consumerStyle.css
/*                     TO DO                     */
/*              GLOBAL HTML ELEMENTS             */
/*           APPLIED ON MULTIPLE PARTS           */
.grocery-list-container, .grocery-list-options, form div {
    border: none;
    padding: 0;
    background-color: initial;
}

.list-item{
    width: max-content;
    border: var(--accent-color) solid 2px ;
    border-radius: 10px;
    padding: 1vw;
    background-color: var(--bg-color);
}

.list-item h2{
    font-weight: bold;
    margin-bottom: 1em;
}

.list-item p{
    margin-bottom: 5px;
}

.list-item span{
    text-decoration: underline;
}
/*               LIST LANDING PAGE               */
main .grocery-lists{
    background-color: var(--bg-color);
    border: var(--secondary-color) solid 2px ;
    border-radius: 10px;
    padding: 1vw;
    margin-bottom: 1vw;
}

main .grocery-lists h1{
    font-weight: bold;
    margin-bottom: 1em;
}

main .grocery-list-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-areas: ". ." ". ." ". .";
    grid-row-gap: 2em;
    grid-column-gap: 2em;
    margin-left: 1em;
    margin-right: 1em;
    margin-bottom: 2em;
}

.grocery-list-options{
    display: flex;
    justify-content: space-around;
}

.grocery-list-options a{
    border: var(--accent-color) solid 2px;
    padding: 1vmax;
    border-radius: 10px;
}

.grocery-list-options span{
    color: black;
}
span[class^="fas"]{
    text-decoration: none;
}

span[class="fas fa-arrow-right"]{
    margin-right: 0;
    margin-left: 1vmax;
}

#grocery-lists{
    display: flex;
    flex-flow: row wrap;
    align-content: center;
    justify-content: space-around;
}

/*                ALTER LIST PAGE                */
/*                   ANIMATIONS                  */

